src/objects/NF_FacilitatorCustomQueue__mdt.object
<CustomObject>
    <description>This Custom MetaData is used to Store Rules for selecting the appropriate Queue</description>
    <fields>
        <fullName>Expected_LoA_Level__c</fullName>
        <label>Expected LoA Level</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_BG__c</fullName>
        <label>Lead BG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_BU__c</fullName>
        <label>Lead BU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organisation_Level_5__c</fullName>
        <label>Organisation Level 5</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Developer_Name__c</fullName>
        <label>Queue Developer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_BGs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supporting BGs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Request__c</fullName>
        <label>Type of Request</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Facilitator Custom Queue</label>
    <listViews>
        <fullName>All21</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Lead_BG__c</columns>
        <columns>Lead_BU__c</columns>
        <columns>Market__c</columns>
        <columns>Organisation_Level_5__c</columns>
        <columns>Expected_LoA_Level__c</columns>
        <columns>Queue_Developer_Name__c</columns>
        <columns>Supporting_BGs__c</columns>
        <columns>Type_of_Request__c</columns>
        <filterScope>Everything</filterScope>
        <label>All2</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Facilitator Custom Queues</pluralLabel>
</CustomObject>